--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Accueil</title>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-
+<h1>Groupie-tracker</h1>
+<div class="container">
+    <div class="box">
+        
+    </div>
+</div>
 </body>
 </html>
