move in template and show list of artists

--- a/templates/groupe.html
+++ b/templates/groupe.html
@@ -7,6 +7,8 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
+
+
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
@@ -15,7 +17,8 @@
 
   <title>Groupie-Tarcker</title>  
 
-<link href="./style.css" rel="stylesheet"></head>
+  <link href="./style.css" rel="stylesheet">
+</head>
 
 <body class="minimal">
 <div id="site-border-left"></div>
@@ -35,8 +38,8 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./accueil.html" class="active" title="">Accueil</a></li>
-          <li><a href="./groupe.html"title="">Groupes</a></li>
+          <li><a href="./accueil.html"title="">Accueil</a></li>
+          <li><a href="./groupe.html" class="active"title="">Groupes</a></li>
           <li><a href="./feufe.html" title="">À Propos</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
         </ul>
