--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -7,8 +7,6 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-
-
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
@@ -24,6 +22,8 @@
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
+
+{{define "footer"}}
 <!-- Add your content of header -->
 <header>
   <nav class="navbar  navbar-fixed-top navbar-inverse">
@@ -37,8 +37,8 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./accueil.html"title="">Accueil</a></li>
-          <li><a href="./groupe.html" class="active"title="">Groupes</a></li>
+          <li><a href="./accueil.html" class="active" title="">Accueil</a></li>
+          <li><a href="./groupe.html"title="">Groupes</a></li>
           <li><a href="./feufe.html" title="">À Propos</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
         </ul>
@@ -46,6 +46,9 @@
     </div>
   </nav>
 </header>
+{{end}}
+
+
 <!-- Add your site or app content here -->
   <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./7d20.gif')">
     <div class="container">
