--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Accueil</title>
-    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     {{range $}}
-    <img src="{{.Image}}" alt="">
     <div>
-        <h1>{{.Name}}</h1>
+        <h1>{{.Locations}}</h1>
     </div>
     {{end}}
 </body>
