Templates mis à jour

--- a/templates/groupe.html
+++ b/templates/groupe.html
@@ -19,7 +19,16 @@
           <li><a href="./Apropos.html" title="">À Propos</a></li>
         </ul>
 </header>
-<body background="../static/image/7d20.gif">
+<body>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div  class="Box">Coucou ! Je suis un exemple de groupe</div>
+  <br>
+  <div  class="Box">Coucou ! Je suis un exemple de groupe</div>
+
 
 </body>
 </html>
