mis à jour templates

--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -20,7 +20,7 @@
 </header>
 <body>
   <div>
-  <img src="../static/image/605bbcb0b528244d9f494ad8c69bf055.png">
+  <img src="../static/image/titre.png">
 </div>
 
 </body>
