--- a/static/style.css
+++ b/static/style.css
@@ -30,7 +30,7 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: rgb(141, 10, 21);
+  background-color: #a06887;
 }
 .active {
   background-color: #480a992f;
@@ -46,7 +46,7 @@ li a:hover {
 
   /* La couche la plus basse sera
      peinte avec un gris clair uni */
-  background-color: #8c185ac9;
+  background-color: #8c185a3a;
 
   /* Ensuite on applique des gradients
      linéaires les uns sur les autres
@@ -54,17 +54,15 @@ li a:hover {
      Comme vous pouvez le voir, les gradients
      sont considérés et manipulés comme des
      images */
-  background-image: linear-gradient(175deg, rgba(0,0,0,0) 95%, #8c1859 0),
-                    linear-gradient( 85deg, rgba(0,0,0,0) 95%, #9b1b56 10%),
-                    linear-gradient(175deg, rgba(0,0,0,0) 90%, #ad2355 20%),
-                    linear-gradient( 85deg, rgba(0,0,0,0) 92%, #c22f54 30%),
-                    linear-gradient(175deg, rgba(0,0,0,0) 85%, #d93f53 40%),
-                    linear-gradient( 85deg, rgba(0,0,0,0) 89%, #f25353 50%),
-                    linear-gradient(175deg, rgba(0,0,0,0) 80%, #ff6951 60%),
-                    linear-gradient( 85deg, rgba(0,0,0,0) 86%, #ff7e4b 70%),
-                    linear-gradient(175deg, rgba(0,0,0,0) 75%, #ff9243 80%),
-                    linear-gradient( 85deg, rgba(0,0,0,0) 83%, #ffa537 90%),
-                    linear-gradient(175deg, rgba(0,0,0,0) 70%, #ffb629 100%);
+  background-image: linear-gradient(175deg, rgba(0,0,0,0) 95%, #4e4371 0),
+                    linear-gradient( 85deg, rgba(0,0,0,0) 95%, #65517b 11%),
+                    linear-gradient(175deg, rgba(0,0,0,0) 90%, #775b84 22%),
+                    linear-gradient( 85deg, rgba(0,0,0,0) 92%, #90698d 33%),
+                    linear-gradient(175deg, rgba(0,0,0,0) 85%, #ab6884 44%),
+                    linear-gradient( 85deg, rgba(0,0,0,0) 89%, #b76880 55%),
+                    linear-gradient(175deg, rgba(0,0,0,0) 80%, #c76472 66%),
+                    linear-gradient( 85deg, rgba(0,0,0,0) 83%, #cf686f 77%),
+                    linear-gradient(175deg, rgba(0,0,0,0) 70%, #f87e61 100%);
                     
                     
                     
