--- a/templates/components/card.html
+++ b/templates/components/card.html
@@ -2,7 +2,7 @@
     <div class="card">
         <img src="{{.Image}}" alt="">
         <div class="texte">
-            <p>Name : {{.Name}} <br> Begin at {{.CreationDate}} <br> First album at {{.FirstAlbum}}</p>
+            <p>Name : {{.Name}} <br> Started in {{.CreationDate}} <br> First album in {{.FirstAlbum}}</p>
         </div>
     </div>
 {{end}}
