--- a/templates/Apropos.html
+++ b/templates/Apropos.html
@@ -4,24 +4,34 @@
 <head>
   <meta charset="UTF-8">  
   <link href="../static/image/music-icon-2.png" rel="icon">
+  
 
   <title>Groupie-Tarcker</title>  
 
 <link href="../static/style.css" rel="stylesheet"></head>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <ul>
-          <li><a href="./accueil.html"title="">Accueil</a></li>
-          <li><a href="./groupe.html"title="">Groupes</a></li>
-          <li><a href="./Apropos.html"class="active"title="">À Propos</a></li>
-        </ul>
+<header>
+  <div class="wrapper">
+    <a href="./accueil.html">
+    <div class="icon home">
+      <div class="tooltip">Accueil</div>
+      <span><i class="fa fa-home"></i></span>
+    </div></a>
+    <a href="./groupe.html">
+    <div class="icon groupe">
+      <div class="tooltip">Groupes</div>
+      <span><i class="fa fa-group"></i></span>
+    </div></a>
+    <a href="./Apropos.html">
+    <div class="icon about">
+      <div class="tooltip">À Propos</div>
+      <span><i class="fa fa-at"></i></span>
+    </div>
+  </div></a>     
+        
 </header>
 <body>
-    <img src="../static/image/Informatique.png" width="100" height="50">
-    <h1><p>Je teste le texte là</p></h1>
-    
+    frgryrrthrthrthrthr
+    <div class="spinner"></div>
 </body>
 
 </body>
