--- a/templates/groupe.html
+++ b/templates/groupe.html
@@ -8,27 +8,26 @@
   <title>Groupie-Tarcker</title>  
 
 <link href="../static/style.css" rel="stylesheet"></head>
-
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <ul>  
-          <li><a href="./accueil.html"title="">Accueil</a></li>
-          <li><a href="./groupe.html"class="active"title="">Groupes</a></li>
-          <li><a href="./Apropos.html" title="">À Propos</a></li>
-        </ul>
+<header>
+  <div class="wrapper">
+    <a href="./accueil.html">
+    <div class="icon home">
+      <div class="tooltip">Accueil</div>
+      <span><i class="fa fa-home"></i></span>
+    </div></a>
+    <a href="./groupe.html">
+    <div class="icon groupe">
+      <div class="tooltip">Groupes</div>
+      <span><i class="fa fa-group"></i></span>
+    </div></a>
+    <a href="./Apropos.html">
+    <div class="icon about">
+      <div class="tooltip">À Propos</div>
+      <span><i class="fa fa-at"></i></span>
+    </div>
+  </div></a>       
 </header>
 <body>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <div  class="Box">Coucou ! Je suis un exemple de groupe</div>
-  <br>
-  <div  class="Box">Coucou ! Je suis un exemple de groupe</div>
-
-
+  
 </body>
 </html>
