--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -4,24 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <link href="../static/image/music-icon-2.png" rel="icon">
+  <link rel="Shock" href="./static/font/Shockwave.ttf"/>
 
   <title>Groupie-Tarcker</title>  
 
 <link href="../static/style.css" rel="stylesheet"></head>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-          <ul>
-          <li><a href="./accueil.html" class="active" title="">Accueil</a></li>
-          <li><a href="./groupe.html"title="">Groupes</a></li>
-          <li><a href="./Apropos.html" title="">À Propos</a></li>
-        </ul>
+<header>
+  <div class="wrapper">
+    <a href="./accueil.html">
+    <div class="icon home">
+      <div class="tooltip">Accueil</div>
+      <span><i class="fa fa-home"></i></span>
+    </div></a>
+    <a href="./groupe.html">
+    <div class="icon groupe">
+      <div class="tooltip">Groupes</div>
+      <span><i class="fa fa-group"></i></span>
+    </div></a>
+    <a href="./Apropos.html">
+    <div class="icon about">
+      <div class="tooltip">À Propos</div>
+      <span><i class="fa fa-question-circle"></i></span>
+    </div>
+  </div></a>
+
 </header>
 <body>
   <div>
-  <img src="../static/image/titre.png">
-</div>
-
+    <h1 disable style="color:rgb(228, 228, 228);font-size:150px;">Groupie Tracker</h1> 
+  </div>
 </body>
 </html>
