--- a/templates/Apropos.html
+++ b/templates/Apropos.html
@@ -30,9 +30,18 @@
         
 </header>
 <body>
-    frgryrrthrthrthrthr
-    <div class="spinner"></div>
-</body>
-
+  <CENTER>
+    <FONT face="arial">
+      <p>Groupie Trackers consiste à recevoir une API donnée et à manipuler les données qu'elle contient, afin de créer un site, affichant les informations.</p>
+      <p>Mais c'est aussi une application web qui permet d'avoir des information sur vos chanteurs et/ou groupes de chanteurs.</p>
+      <br>
+      <p>Nous sommes trois à avoir travaillé sur le projet:</p>
+      <br>
+      <p>Alexandre ROLLAND</p>
+      <p>Yassine ENNOUHI</p>
+      <p>Mathis CEBILE</p>
+    </FONT>
+    <img src="../static/image/Informatique.png">
+  </CENTER>
 </body>
 </html>
