--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <link href="../static/image/music-icon-2.png" rel="icon">
-  <link rel="Shock" href="./static/font/Shockwave.ttf"/>
 
   <title>Groupie-Tarcker</title>  
 
@@ -31,7 +30,7 @@
 </header>
 <body>
   <div>
-    <h1 disable style="color:rgb(228, 228, 228);font-size:150px;">Groupie Tracker</h1> 
+    <h1 style="color:#ffff;font-size:150px;">Groupie Tracker</h1> 
   </div>
 </body>
 </html>
