--- a/templates/Apropos.html
+++ b/templates/Apropos.html
@@ -10,6 +10,8 @@
 
 <link href="../static/style.css" rel="stylesheet"></head>
 <header>
+  <nav>
+    <ul>
   <div class="wrapper">
     <a href="./accueil.html">
     <div class="icon home">
@@ -26,8 +28,9 @@
       <div class="tooltip">À Propos</div>
       <span><i class="fa fa-at"></i></span>
     </div>
-  </div></a>     
-        
+  </div></a>
+      </ul>     
+    </nav>    
 </header>
 <body>
   <CENTER>
