--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -9,28 +9,32 @@
 
 <link href="../static/style.css" rel="stylesheet"></head>
 <header>
-  <div class="wrapper">
+<nav>
+  <ul>
+  <div class="wrapper">  
     <a href="./accueil.html">
-    <div class="icon home">
+    <div class="icon Accueil">
       <div class="tooltip">Accueil</div>
-      <span><i class="fa fa-home"></i></span>
+    <span><i class="fa fa-home" id="Accueil"></i></span>
     </div></a>
     <a href="./groupe.html">
-    <div class="icon groupe">
-      <div class="tooltip">Groupes</div>
-      <span><i class="fa fa-group"></i></span>
+    <div class="icon Groupes">
+      <div class="tooltip">Artiste</div>
+    <span><i class="fa fa-group" id="Groupes"></i></span>
     </div></a>
     <a href="./Apropos.html">
-    <div class="icon about">
+    <div class="icon ÀPropos">
       <div class="tooltip">À Propos</div>
-      <span><i class="fa fa-question-circle"></i></span>
-    </div>
-  </div></a>
+    <span><i class="fa fa-question-circle" id="ÀPropos"></i></span>
+    </div></a>
 
+  </div>
+</ul>
+</nav>
 </header>
 <body>
   <div>
-    <h1 style="color:#ffff;font-size:150px;">Groupie Tracker</h1> 
-  </div>
+    <h1 style="color:#ffff;font-size:150px;">Groupie Tracker</h1>
+    </div> 
 </body>
 </html>
