--- a/templates/groupe.html
+++ b/templates/groupe.html
@@ -9,6 +9,8 @@
 
 <link href="../static/style.css" rel="stylesheet"></head>
 <header>
+  <nav>
+    <ul>
   <div class="wrapper">
     <a href="./accueil.html">
     <div class="icon home">
@@ -24,8 +26,10 @@
     <div class="icon about">
       <div class="tooltip">À Propos</div>
       <span><i class="fa fa-at"></i></span>
-    </div>
-  </div></a>       
+  </div>
+  </div></a>
+</ul>
+</nav>       
 </header>
 <body>
   
