--- a/static/style.css
+++ b/static/style.css
@@ -20,34 +20,6 @@ body {
 div{
   text-align: center;
 }
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: rgba(51, 51, 51, 0);
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #a06887;
-}
-.active {
-  background-color: #480a992f;
-}
-
 
 .spinner{
   height: 36px;
@@ -73,13 +45,14 @@ li a:hover {
 
 body{
   font-family: "Shockwave", serif;
+  margin: 0;
 }
 
 .wrapper{
   display: flex;
   justify-content: center;
   align-content: 0;
-  margin-top: 30px;
+  margin: 0;
 }
 
 .wrapper .icon{
@@ -148,4 +121,48 @@ body{
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+}
+
+
+nav{
+  width: 100%;
+  margin: auto;
+  background-color: #70435c88;
+  position: sticky;
+  top: 0px;
+}
+
+nav ul{
+  list-style-type: none;
+}
+
+nav li{
+  float: left;
+  width: 10%;/*100% divisé par le nombre d'éléments de menu*/
+  text-align: center;/*Centre le texte dans les éléments de menu*/
+}
+
+/*Evite que le menu n'ait une hauteur nulle*/
+nav ul::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+nav a{
+  display: block; /*Toute la surface sera cliquable*/
+  text-decoration: none;
+  color: black;
+  border-bottom: 2px solid transparent;/*Evite le décalage des éléments sous le menu à cause de la bordure en :hover*/
+  padding: 0px;/*Agrandit le menu et espace la bordure du texte*/
+}
+
+nav a:hover{
+  color: orange;
+  border-bottom: 2px solid gold;
+}
+
+.conteneur{
+margin: 0px 20px;
+height: 1500px;
 }
