--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,16 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        {{template "navbar"}}
         <form action="/artists" method="post">
             <input type="text" name="artists">
             <button type="submit">Rechercher</button>
         </form>
-        <!-- $ = la donnée importé -->
-        {{range $}} <!-- $ = la donnée importé -->
-          {{template "card" .}}
-        {{end}}    
+        <div class="cards-list">
+            <!-- $ = la donnée importé -->
+            {{range $}} <!-- $ = la donnée importé -->
+              {{template "card" .}}
+            {{end}}    
+        </div>
     </body>
 </html>
