--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,3 @@
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
-
-
 @font-face {
   font-family: Shockwave;
   src: local("Helvetica Neue Bold"),
@@ -149,38 +146,37 @@ height: 1500px;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   margin: 20px 20px;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 250px;
   border-radius: 40px;
+  overflow: hidden;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
 }
 
 .card .card_image {
-  width: inherit;
-  height: inherit;
-  border-radius: 40px;
-}
-
-.card .card_image img {
-  height: 100%;
-  width: auto;
-  border-radius: 40px;
-  object-fit: cover;
+  width: 100%;
+  max-height: 80%;
 }
 
 .card .card_title {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  height: 20%;
+}
+
+.card .card_title p {
+  margin: auto;
   text-align: center;
-  border-radius: 0px 0px 40px 40px;
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 1.5em;
-  margin-top: -80px;
-  height: 40px;
+  font-size: 16px;
   color: black;
-  background-color: white;
 }
 
 .card:hover {
