--- a/templates/components/card.html
+++ b/templates/components/card.html
@@ -1,10 +1,10 @@
 {{define "card"}}
-<a href="/artists/{{.Id}}">
-  <div class="card">
-      <div class="card_image"> <img src="{{.Image}}" /> </div>
-      <div class="card_title">
+<div>
+    <a href="/artists/{{.Id}}" class="card">
+    <img src="{{.Image}}" class="card_image"/>
+    <div class="card_title">
         <p>{{.Name}}</p>
-      </div>
     </div>
-</a>
+    </a>
+</div>
 {{end}}
