--- a/templates/locations.html
+++ b/templates/locations.html
@@ -13,7 +13,11 @@
         width="450"
         height="250"
         frameborder="0" style="border:0"
-        src="{{.}}" allowfullscreen>
+        src="{{.Location}}" allowfullscreen>
        </iframe>
+       <h3> Artists in Area: </h3>
+     {{ range  .Artists}}
+       <li> {{.}} </li>
+       {{end}}
     </body>
 </html>
