Commit before Merge

--- a/templates/Apropos.html
+++ b/templates/Apropos.html
@@ -36,7 +36,7 @@
   <CENTER>
     <FONT face="arial">
       <p>Groupie Trackers consiste à recevoir une API donnée et à manipuler les données qu'elle contient, afin de créer un site, affichant les informations.</p>
-      <p>Mais c'est aussi une application web qui permet d'avoir des information sur vos chanteurs et/ou groupes de chanteurs.</p>
+      <p>Mais c'est aussi une application web qui permet d'avoir des information sur vos chanteurs et/ou groupes de chanteurs préféré.</p>
       <br>
       <p>Nous sommes trois à avoir travaillé sur le projet:</p>
       <br>
