--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,34 +16,6 @@ body {
   background-image:url(./image/84248.png);
   background-repeat:no-repeat;
   background-size: cover;
-  }
-div{
-  text-align: center;
-}
-
-.spinner{
-  height: 36px;
-  width: 36px;
-  background-color: #ffffff;
-  animation: flip 1s linear infinite;
-}
-@keyframes flip {
-  50%{
-    transform: rotateX(180deg);
-  }
-  100%{
-    transform: rotateX(180deg) rotateY(180deg);
-  }
-  
-}
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body{
   font-family: "Shockwave", serif;
   margin: 0;
 }
@@ -153,7 +125,7 @@ nav a{
   display: block; /*Toute la surface sera cliquable*/
   text-decoration: none;
   color: black;
-  border-bottom: 2px solid transparent;/*Evite le décalage des éléments sous le menu à cause de la bordure en :hover*/
+  border-bottom: 2px solid transparent; /*Evite le décalage des éléments sous le menu à cause de la bordure en :hover*/
   padding: 0px;/*Agrandit le menu et espace la bordure du texte*/
 }
 
@@ -166,3 +138,57 @@ nav a:hover{
 margin: 0px 20px;
 height: 1500px;
 }
+
+/** Card */
+
+.cards-list {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card {
+  margin: 20px 20px;
+  width: 300px;
+  height: 300px;
+  border-radius: 40px;
+  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.card .card_image {
+  width: inherit;
+  height: inherit;
+  border-radius: 40px;
+}
+
+.card .card_image img {
+  height: 100%;
+  width: auto;
+  border-radius: 40px;
+  object-fit: cover;
+}
+
+.card .card_title {
+  text-align: center;
+  border-radius: 0px 0px 40px 40px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-top: -80px;
+  height: 40px;
+  color: black;
+  background-color: white;
+}
+
+.card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+    -5px -5px 30px 15px rgba(0,0,0,0.22);
+}
+
+
+
+/**/
