--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -3,35 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <link href="../static/image/music-icon-2.png" rel="icon">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link href="./assets/icon16x16.png" rel="icon">
 
   <title>Groupie-Tarcker</title>  
 
 <link href="../static/style.css" rel="stylesheet"></head>
-<header>
-<nav>
-  <ul>
-  <div class="wrapper">  
-    <a href="./accueil.html">
-    <div class="icon Accueil">
-      <div class="tooltip">Accueil</div>
-    <span><i class="fa fa-home" id="Accueil"></i></span>
-    </div></a>
-    <a href="./groupe.html">
-    <div class="icon Groupes">
-      <div class="tooltip">Artiste</div>
-    <span><i class="fa fa-group" id="Groupes"></i></span>
-    </div></a>
-    <a href="./Apropos.html">
-    <div class="icon ÀPropos">
-      <div class="tooltip">À Propos</div>
-    <span><i class="fa fa-question-circle" id="ÀPropos"></i></span>
-    </div></a>
-
-  </div>
-</ul>
-</nav>
-</header>
 <body>
   <div>
     <h1 style="color:#ffff;font-size:150px;">Groupie Tracker</h1>
