--- a/templates/groupe.html
+++ b/templates/groupe.html
@@ -3,7 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <link href="../static/image/music-icon-2.png" rel="icon">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+
+
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link href="./assets/icon16x16.png" rel="icon">
 
   <title>Groupie-Tarcker</title>  
 
