--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Accueil</title>
-</head>
-<body>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Accueil</title>
+        <link rel="stylesheet" href="/css/style.css">
+    </head>
+    <body>
+        {{template "navbar"}}
+        <form action="/artists" method="post">
+            <input type="text" name="artists">
+            <button type="submit">Rechercher</button>
+        </form>
+        <div class="cards-list">
+            <!-- $ = la donnée importé -->
+            {{range $}} <!-- $ = la donnée importé -->
+              {{template "card" .}}
+            {{end}}    
+        </div>
+    </body>
 </html>
