--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Accueil</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <title>Artist</title>
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         {{template "navbar"}}
