--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,26 +1,12 @@
 {{define "navbar"}}
 <header>
-    <nav>
-      <ul>
-      <div class="wrapper">  
-        <a href="./accueil.html">
-        <div class="icon Accueil">
-          <div class="tooltip">Accueil</div>
-        <span><i class="fa fa-home" id="Accueil"></i></span>
-        </div></a>
-        <a href="./groupe.html">
-        <div class="icon Groupes">
-          <div class="tooltip">Artiste</div>
-        <span><i class="fa fa-group" id="Groupes"></i></span>
-        </div></a>
-        <a href="./Apropos.html">
-        <div class="icon ÀPropos">
-          <div class="tooltip">À Propos</div>
-        <span><i class="fa fa-question-circle" id="ÀPropos"></i></span>
-        </div>
-        </a>
-      </div>
-    </ul>
+  <nav>
+    <a href="./home">HOME</a>
+    <a href="./artists">ARTISTS</a>
+    <a href="./team">ABOUT</a>
+    <div id="indicator"></div>
   </nav>
 </header>
 {{end}}
+
+
