--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,132 +8,133 @@
 
  
 body {
-  color:rgb(218, 218, 218);
-  background-color:rgb(59, 59, 59);
-  background-image:url(./image/84248.png);
+  background-image:url(/static/img/84248.png);
   background-repeat:no-repeat;
   background-size: cover;
   font-family: "Shockwave", serif;
   margin: 0;
 }
-
-.wrapper{
-  display: flex;
-  justify-content: center;
-  align-content: 0;
-  margin: 0;
+header{
+  background-color: white;
 }
-
-.wrapper .icon{
+nav {
   position: relative;
-  border-radius: 50%;
-  padding: 15px;
-  margin: 10px;
-  width: 50px;
-  height: 50px;
-  font-size: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.wrapper .icon{
-  color: #fff;
-  transition: .4s linear;
-}
-
-.wrapper .icon::before,
-.wrapper .icon::after{
-  content: '';
-  position: absolute;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
+  right: 0;
   left: 0;
-  top: 0;
-  transition: .4s linear;
-}
-
-.wrapper .icon:hover::before{
-  border-radius: 50%;
-  border-left: 4px solid;
-  border-right: 4px solid;
-  transform: skewX(20deg);
-  color: #fff;
-}
-
-.wrapper .icon:hover::after{
-  border-radius: 50%;
-  border-left: 4px solid;
-  border-right: 4px solid;
-  transform: skewY(-20deg);
-  color: #fff;
-}
-
-.wrapper .tooltip{
-  position: absolute;
-  top: 0;
-  font-size: 14px;
-  color: #ffffff;
-  padding: 5px 8px;
-  border-radius: 5px;
-  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-}
-
-.wrapper .icon:hover .tooltip{
-  top: -45px;
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-
-nav{
-  width: 100%;
-  margin: auto;
-  background-color: #70435c88;
-  position: sticky;
-  top: 0px;
-}
-
-nav ul{
-  list-style-type: none;
-}
-
-nav li{
-  float: left;
-  width: 10%;/*100% divisé par le nombre d'éléments de menu*/
-  text-align: center;/*Centre le texte dans les éléments de menu*/
-}
-
-/*Evite que le menu n'ait une hauteur nulle*/
-nav ul::after{
-  content: "";
+  width: 319px;
   display: table;
-  clear: both;
+  margin: 0 auto;
+  padding: 10px;
 }
 
-nav a{
-  display: block; /*Toute la surface sera cliquable*/
+nav a {
+  position: relative;
+  width: 33.333%;
+  display: table-cell;
+  text-align: center;
+  color: #000000;
   text-decoration: none;
-  color: black;
-  border-bottom: 2px solid transparent; /*Evite le décalage des éléments sous le menu à cause de la bordure en :hover*/
-  padding: 0px;/*Agrandit le menu et espace la bordure du texte*/
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  padding: 10px 20px;
+  transition: 0.2s ease color;
 }
 
-nav a:hover{
-  color: orange;
-  border-bottom: 2px solid gold;
+nav a:before,
+nav a:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.2s ease transform;
+  
 }
 
-.conteneur{
-margin: 0px 20px;
-height: 1500px;
+nav a:before {
+  top: 0;
+  left: 10px;
+  width: 6px;
+  height: 6px;
+}
+
+nav a:after {
+  top: 5px;
+  left: 18px;
+  width: 4px;
+  height: 4px;
+}
+
+nav a:nth-child(1):before {
+  background-color: yellow;
+}
+
+nav a:nth-child(1):after {
+  background-color: red;
+}
+
+nav a:nth-child(2):before {
+  background-color: #00e2ff;
+}
+
+nav a:nth-child(2):after {
+  background-color: #89ff00;
+}
+
+nav a:nth-child(3):before {
+  background-color: purple;
+}
+
+nav a:nth-child(3):after {
+  background-color: palevioletred;
+}
+
+#indicator {
+  position: absolute;
+  left: 5%;
+  bottom:10px;
+  width: 30px;
+  height: 3px;
+  background-color: black;
+  border-radius: 5px;
+  transition: 0.2s ease left;
+}
+
+nav a:nth-child(1):hover {
+  background: linear-gradient(130deg, yellow, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+nav a:nth-child(2):hover{
+  background: linear-gradient(130deg, #00e2ff, #89ff00);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+nav a:nth-child(3):hover{
+  background: linear-gradient(130deg, purple, palevioletred);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+nav a:hover:before,
+nav a:hover:after {
+  transform: scale(1);
+}
+
+nav a:nth-child(1):hover ~ #indicator {
+  background: linear-gradient(130deg, yellow, red);
+}
+
+nav a:nth-child(2):hover ~ #indicator {
+  left: 34%;
+  background: linear-gradient(130deg, #00e2ff, #89ff00);
+}
+
+nav a:nth-child(3):hover ~ #indicator {
+  left: 70%;
+  background: linear-gradient(130deg, purple, palevioletred);
 }
 
 /** Card */
