--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         {{template "navbar"}}
         <form action="/artists" method="post">
-            <input type="text" name="artists">
+            <input type="text" name="artists" value="{{.SavedData.SearchBar}}">
 
             <select name="trie" onchange="this.form.submit()"> 
                 <option value="">Trier par :</option>
@@ -53,6 +53,10 @@
                   </optgroup>
             </select>
 
+            <div>
+                <input type="checkbox" id="coding" name="interest" value="coding">
+                <label for="coding">Développement</label>
+              </div>
             <button type="submit">Rechercher</button>
         </form>
         
@@ -65,6 +69,8 @@
                 {{range .PageNumber}} 
                     <button type="submit" name="page" value="{{.}}">{{.}}</button>
                 {{end}}   
+
+
                 <!-- Saved data in form ^^ -->
                 <input type="hidden" name="savedPage" value="{{.SavedData.Page}}">
                 <input type="hidden" name="savedArtists" value="{{.SavedData.SearchBar}}">
