--- a/templates/locations.html
+++ b/templates/locations.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Locations</title>
+        <title>Artist</title>
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
+        {{ template "navbar" }}
         <form action="/locations" method="post">
             <input type="text" name="locations">
             <button type="submit">Rechercher</button>
@@ -13,7 +15,7 @@
         width="450"
         height="250"
         frameborder="0" style="border:0"
-        src="{{.Location}}" allowfullscreen>
+        src="{{.Location}}">
        </iframe>
        <h3> Artists in Area: </h3>
      {{ range .Artists }}
