--- a/templates/err404.html
+++ b/templates/err404.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <title>Error 404</title>
 </head>
 <body>
+ {{template "navbar"}}
     <center> 
     <img src="https://image.freepik.com/vecteurs-libre/erreur-glitch-404-fond-page_23-2148072533.jpg"/>
     </center>
