[UPDATE] home page handler

--- a/templates/locations.html
+++ b/templates/locations.html
@@ -5,6 +5,7 @@
         <title>Locations</title>
     </head>
     <body>
+        {{template "navbar"}}
         <form action="/locations" method="post">
             <input type="text" name="locations">
             <button type="submit">Rechercher</button>
