--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -3,7 +3,7 @@
   <nav>
     <a href="./home">HOME</a>
     <a href="./artists">ARTISTS</a>
-    <a href="./team">ABOUT</a>
+    <a href="./locations">MAP</a>
     <div id="indicator"></div>
   </nav>
 </header>
