--- a/templates/home.html
+++ b/templates/home.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>HOME-Groupie Tracker</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         {{template "navbar"}}
         <form action="/home" method="post">
-          <input type="text" name="home">
       </form>
-        
     </body>
 </html>
