--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,14 @@
                     </div>
             {{ end }}
 
+            <!-- Saved data in form ^^ -->
+            <input type="hidden" name="savedPage" value="{{.SavedData.Page}}">
+            <input type="hidden" name="savedArtists" value="{{.SavedData.SearchBar}}">
+            <input type="hidden" name="savedTrie" value="{{.SavedData.Trie}}">
+            {{ range .SavedData.PinChecked }}
+            <input type="hidden" name="savedMembers" value="{{.}}">
+            {{ end }}
+
             <button type="submit">Rechercher</button>
         </form>
         
@@ -77,7 +85,9 @@
                 <input type="hidden" name="savedPage" value="{{.SavedData.Page}}">
                 <input type="hidden" name="savedArtists" value="{{.SavedData.SearchBar}}">
                 <input type="hidden" name="savedTrie" value="{{.SavedData.Trie}}">
-                <input type="hidden" name="savedMembers" value="{{.SavedData.PinChecked}}">
+                {{ range .SavedData.PinChecked }}
+                <input type="hidden" name="savedMembers" value="{{.}}">
+                {{ end }}
             </form>
         </form>
     </body>
