--- a/templates/home.html
+++ b/templates/home.html
@@ -9,5 +9,8 @@
         {{template "navbar"}}
         <form action="/home" method="post">
       </form>
+      <div class="title">
+          <h1><u><a>Groupie Tracker</a></u></h1>
+      </div>
     </body>
 </html>
