--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         <form action="/home" method="post">
       </form>
       <div class="title">
-          <h1><u><a>Groupie Tracker</a></u></h1>
+          <h1>Groupie Tracker</h1> <!-- C'est qu'un titre bro, lui met pas 50 balises (div title h1 u a) :/ -->
       </div>
     </body>
 </html>
